Corrections suite aux tests